=== CHANGELOG ===

Next release
  * Can now anoint sacrificial creatures (at the font) for extra favour when sacrificed.
  * Added 3 new playable priests (chaplain, nun and scientist).
  * Game will now run in full-screen (at desktop resolution only; there will be black edging unless screen has a 16:10 aspect ratio).
  * Added menu, on <escape> by default, that can be accessed in-game (instructions and options are available). This also pauses when playing offline.
  * Network stats and fps overlays now on 'n' and 'f' respectively and can be configured (FPS no longer in title bar).
  * Added i18n support, including translations of the game into 1337 and Piratical English.
  * Removed the standing stones from the Forest map, since they just restricted movement too much.
  * Slowed down preparation of level, so neither host nor client gets overwhelmed and freezes up.
  * Game can be played in Piratical and 1337 english text.
  * Fixed: Completion times for all achievements already gained, are set to the current time whenever the application is started.
  * Fixed: Several creatures do not yield favour.
  * Many minor improvements to the GUI, especially when scaling to higher resolutions.

v0.1.0 (2011-06-07)

  * Changed default online player controls to same as player 1. Reset everyone's settings to default.
  * Collects game-play statistics locally (for achievements).
  * Added achievements and unlocks system.
  * Added some more sound effects (but nowhere near enough).
  * Can't pick up creatures that can hurt you, or the other player, unless they are knocked down first.
  * Knocked back when hit by a monster, rather than taking damage-over time (fire still burns slowly, however).
  * Gods love certain sacrifices at any given time, which will net greatly increased favour.
  * Favour of object currently carried is indicated next to favour bars.
  * Can set sound volume and window size in options (sorry, no full-screen mode yet).
  * Added 2 new playable priests.