@@ -2,9 +2,9 @@ module Wrath
   class Fire < DynamicObject
     trait :timer
 
+    BURN_DURATION = 5000
     ANIMATION_DELAY = 500
     GLOW_COLOR = Color.rgb(255, 255, 50)
-    EXTRA_SPEED = 1
     DPS = 5
 
     def initialize(options = {})
@@ -24,18 +24,11 @@ module Wrath
       @frames.delay = ANIMATION_DELAY
     end
 
-    def on_being_picked_up(container)
-      container.speed += EXTRA_SPEED if container.is_a? Creature
-    end
-
-    def on_being_dropped(container)
-      container.speed -= EXTRA_SPEED if container.is_a? Creature
-    end
-
     def update
       super
 
       self.image = @frames.next
+
       if rand(100) < 3
         Smoke.create(parent: parent, x: x - 3 + rand(4) + rand(4), y: y - z - 3 - rand(3), zorder: y - 0.01 + rand(0.02))
       end
@@ -47,6 +40,14 @@ module Wrath
       intensity = [1.5 - (z * 0.05), 0].max
       GLOW_COLOR.alpha = (40 * intensity).to_i
       parent.draw_glow(x, y, GLOW_COLOR, intensity)
+    end
+
+    def on_collision(other)
+      if other.is_a? Creature
+        other.apply_status(:burning, duration: BURN_DURATION)
+      end
+
+      super(other)
     end
   end
 end
